src/objects/Cartera_Actual_Financiera__c.object
<CustomObject>
    <fields>
        <fullName>Calidad__c</fullName>
        <label>Calidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claf__c</fullName>
        <label>Claf</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Carteras Actual Financiera</relationshipLabel>
        <relationshipName>Carteras_Actuales_Financieras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Es_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Es Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero__c</fullName>
        <label>Número</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_Deuda__c</fullName>
        <label>Porcentaje Deuda</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porcentaje_Part__c</fullName>
        <label>Porcentaje Part</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_Actual__c</fullName>
        <label>Saldo Actual</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saldo_Mora__c</fullName>
        <label>Saldo Mora</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Deuda__c</fullName>
        <label>Total Porcentaje Deuda</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Porcentaje_Part__c</fullName>
        <label>Total Porcentaje Part</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Actual__c</fullName>
        <label>Total Saldo Actual</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Saldo_Mora__c</fullName>
        <label>Total Saldo Mora</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Cuota__c</fullName>
        <label>Total Valor Cuota</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Valor_Inicial__c</fullName>
        <label>Total Valor Inicial</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valor_Cuota__c</fullName>
        <label>Valor Cuota</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_Inicial__c</fullName>
        <label>Valor Inicial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Cartera Actual Financiera</label>
    <nameField>
        <label>Nombre de Cartera</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteras Actual Financiera</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>